@@ -47,6 +47,11 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 
 <dl>
 <dt>March 24, 2010</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.3.51).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
+<dt>March 24, 2010</dt>
 <dd>We are now using the <a href="http://bugs.octave.org">a bug tracker</a>
 to manage bug reports instead of the bug@octave.org mailing
 list.  Fow now, the list will continue to function, but you are
