@@ -18,6 +18,11 @@ __TITLE_BAR__(`Current News')
 
 <dl>
 <dt>March 24, 2010</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.3.51).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
+<dt>March 24, 2010</dt>
 <dd>We are now using the __HTTP__(`bugs.octave.org', `a bug tracker')
 to manage bug reports instead of the bug@octave.org mailing
 list.  Fow now, the list will continue to function, but you are
